# Synthetic-Dream-Machine

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CustomGPT_Prompt.md  Deterministic_IaM_Build.md  Dockerfile  FTLS-3rd-Party-License.md  Gemfile  Infrastructure_as_Myth.md  LICENSE  Lares_A_CustomGPT_System_Prompt.md  Makefile  Markdown.md  README.md  Synthetic-Dream-Machine-3rd-Party-License.md  Synthetic-Dream-Machine.code-workspace  Synthetic_Dream_Machine_01_Quickstart.md  Synthetic_Dream_Machine_02_Paths_Index.md  Synthetic_Dream_Machine_03_Traits_Index.md  Synthetic_Dream_Machine_04_Powers_Index.md  Synthetic_Dream_Machine_05_Campaign_Regions.md  Synthetic_Dream_Machine_05_Gear_Index.md  Synthetic_Dream_Machine_06_Campaign_Regions.md  TODO_SDM_Trait_Index.md  _config.yml  copilot-instructions.md  docker-compose.yml  index.html  index.md  infrastructure-as-myth.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  setup.cfg  the-lararium-hud.md  (+2 more)
.claude/: CLAUDE.md
.codex/: config.toml
.github/: CODEOWNERS  copilot-instructions.md
.lararium-data/: boot.sqlite
.playwright/: cli.config.json
Campaigns/: index.html  index.md
Elyncia/: Elyncia_01_A_Broken_World.md  Elyncia_02_FTLS_Noosphere_Guide.md  Elyncia_02_Noosphere_Guide.md  Elyncia_02_The_Lares_DreamNet.md  Elyncia_03_Daemons_and_the_Metaphysics_of_Play  Elyncia_03_Daemons_and_the_Metaphysics_of_Play.md  Elyncia_History_and_Noosphere_Guide_01_Elyncia_A_Broken_World.md  Elyncia_History_and_Noosphere_Guide_02_FTLS_Noosphere_Guide.md  index.html  (+4 more)
(+2261 files in other folders)
