[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lares"
version = "0.1.0"
description = "Modular MCP server and agentic framework."
authors = [
    { name="Your Name", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lares*"]
exclude = [
    "mempalace*",
    "kowloon*",
    "kowloon-client*",
    "kowloon-frontend*",
    "tiddlywiki5*",
    "tldraw*"
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "lares/lararium_mcp/tests"
]
norecursedirs = [
    ".git",
    ".venv",
    "mempalace",
    "kowloon",
    "kowloon-client",
    "kowloon-frontend",
    "tiddlywiki5",
    "tldraw"
]
